[package]
name = "server"
version = "0.0.1"
authors = ["dan sinclair <dj2@everburning.com>"]
edition = "2018"
description = "the archive server"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/dj2/Archive/server"

[dependencies]
hyper = { version = "0.14", features = [ "full" ] }
tokio = { version = "1", features = [ "full" ] }
tokio-util = { version = "0.6", features = [ "codec" ] }
routerify = "2.0.0-beta-4"
tree_magic = { version = "0.2" }
handlebars = { version = "3.5" }
lazy_static = { version = "1.4" }
