[package]
name = "server"
version = "0.0.1"
authors = ["dan sinclair <dj2@everburning.com>"]
edition = "2018"
description = "the archive server"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/dj2/Archive/server"

[dependencies]
tokio = { version = "1.8", features = [ "sync" ] }
serde = { version = "1.0", features = [ "derive" ] }
chrono = { version = "0.4" }
mark = { path = "../mark" }

[dependencies.rocket]
version = "0.5.0-dev"
git = "https://github.com/SergioBenitez/Rocket"

[dependencies.rocket_contrib]
version = "0.5.0-dev"
default-features = false
features = [ "serve", "handlebars_templates" ]
git = "https://github.com/SergioBenitez/Rocket"
